# smart-workplace

./: LICENSE
devices/device_common_utils/: .gitignore  README.md  pyproject.toml
devices/device_common_utils/device_common_utils/: models.py  services.py
devices/esp8266_sensors_station/: .gitignore  README.md  config.exmaple.yaml  pyproject.toml
devices/esp8266_sensors_station/esp8266/: cred.exmaple.json  main.py  microapi.py  utils.py
devices/esp8266_sensors_station/esp8266_sensors_station/: __main__.py  containers.py  services.py
devices/philips_air_purifier/: .gitignore  README.md  config.exmaple.yaml  pyproject.toml
devices/philips_air_purifier/philips_air_purifier/: __main__.py  containers.py  services.py
